# tqEngine

./: CMakeLists.txt  Makefile  README.md
lib/glew/: glew.pc
src/: main.cpp
src/modules/ecs/: component.h  ecsWorld.cpp  ecsWorld.h  entity.cpp  entity.h  system.h
src/modules/gameObject/: gameObject.cpp  gameObject.h
src/modules/gameObject/components/: component.h  transform.h
src/modules/gameObject/components/core/: sprite.h  transform.h
src/modules/tqnode/: node.cpp  node.h  nodeBehaviour.h
src/modules/tqnode/nodes/: node3d.h
src/modules/tqnode/nodes/node3d/: sprite3d.cpp  sprite3d.h
src/modules/util/: generationalArray.cpp  generationalArray.h
